Enforce GPU earlier on Mac to avoid GPU switching during startup.

BUG=822837
TEST=manual on Mac with dual GPUs
R=ccameron@chromium.org

Cq-Include-Trybots: luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Ia8a0d741ffaa83fec68d21e67cd54a3eb9eb0136
Reviewed-on: https://chromium-review.googlesource.com/976818
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Reviewed-by: ccameron <ccameron@chromium.org>
Commit-Queue: Zhenyao Mo <zmo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545434}
Former-commit-id: ee6d9fdd6aa00ecc73a23d6da91425c3e776e498